# mlb-stats-rs

./: .gitignore  CONTRIBUTING  Cargo.toml  LICENSE-APACHE  README.md  mlb-stats-rs.code-workspace
.github/workflows/: ci.yml  live-api.yml
ballpark/: Cargo.toml
ballpark/src/types/: team.rs
mlb-stats-api/: Cargo.toml
mlb-stats-api/src/: client.rs  lib.rs  mock.rs  models.rs
mlb-stats-api/src/models/: common.rs
mlb-stats-api/tests/: client.rs  deserialization.rs  integrations.rs  mock.rs  mock_client.rs
scripts/: fetch_fixtures.sh
